--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -70,7 +70,7 @@
             <WebView
                 android:id="@+id/wb_introduction"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="200dp"
                 android:layout_marginTop="20dp"
                 android:paddingStart="14dp"
                 android:text=""
