--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -7,7 +7,7 @@
     android:background="@color/color_white"
     tools:ignore="MissingConstraints">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:id="@+id/sl"
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -427,7 +427,7 @@
                 app:layout_constraintTop_toBottomOf="@id/tv_hot" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
     <View
         android:id="@+id/line"
