--- a/app/src/main/res/layout/activity_release.xml
+++ b/app/src/main/res/layout/activity_release.xml
@@ -162,6 +162,7 @@
         <TextView
             android:id="@+id/button_image"
             style="@style/EditorIcon"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@mipmap/photo" />
