--- a/app/src/main/res/layout/activity_reseales_photo.xml
+++ b/app/src/main/res/layout/activity_reseales_photo.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    <ImageView
+        android:id="@+id/img"
+        android:layout_width="60dp"
+        android:layout_height="60dp"/>
     <com.diwaves.news.tools.MyTitleBar
         android:id="@+id/titleBar"
         android:layout_width="match_parent"
@@ -27,4 +30,5 @@
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </LinearLayout>
