--- a/app/src/main/res/layout/item_look.xml
+++ b/app/src/main/res/layout/item_look.xml
@@ -54,10 +54,10 @@
         android:layout_width="85dp"
         android:layout_height="56dp"
         android:scaleType="fitXY"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_title"
+        android:layout_marginTop="5dp"
+        app:layout_constraintStart_toStartOf="@id/tv_title"
+        app:layout_constraintTop_toBottomOf="@id/tv_title"
         tools:ignore="MissingConstraints" />
-
 
 
     <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
@@ -85,7 +85,7 @@
         android:text="2阅读"
         android:textColor="#ff989898"
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+        app:layout_constraintTop_toBottomOf="@id/iv_detail" />
 
     <TextView
         android:id="@+id/tv_comment"
