--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -81,8 +81,8 @@
                 android:id="@+id/iv_img_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:padding="14dp"
                 android:layout_marginTop="20dp"
-                android:paddingStart="14dp"
                 android:text=""
                 android:textSize="16sp"
                 app:layout_constraintTop_toBottomOf="@id/wb_introduction"
