--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -23,6 +23,18 @@
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <View
+        android:id="@+id/v_tuijian"
+        android:layout_width="20dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+
+        android:background="@color/color_2BA4D9"
+        app:layout_constraintEnd_toEndOf="@id/tv_tuijian"
+        app:layout_constraintStart_toStartOf="@id/tv_tuijian"
+        app:layout_constraintTop_toBottomOf="@id/tv_tuijian" />
+
     <TextView
         android:id="@+id/tv_bangdan"
         android:layout_width="wrap_content"
@@ -37,6 +49,18 @@
         app:layout_constraintEnd_toStartOf="@id/tv_guanzhu"
         app:layout_constraintStart_toEndOf="@id/tv_tuijian" />
 
+    <View
+        android:id="@+id/v_bangdan"
+        android:layout_width="20dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@color/color_2BA4D9"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@id/tv_bangdan"
+        app:layout_constraintStart_toStartOf="@id/tv_bangdan"
+        app:layout_constraintTop_toBottomOf="@id/tv_bangdan" />
+
     <TextView
         android:id="@+id/tv_guanzhu"
         android:layout_width="wrap_content"
@@ -50,6 +74,17 @@
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@id/tv_bangdan" />
 
+    <View
+        android:id="@+id/v_guanzhu"
+        android:layout_width="20dp"
+        android:layout_height="1dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="@color/color_2BA4D9"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="@id/tv_guanzhu"
+        app:layout_constraintStart_toStartOf="@id/tv_guanzhu"
+        app:layout_constraintTop_toBottomOf="@id/tv_guanzhu" />
 
     <ImageView
         android:id="@+id/iv_search"
@@ -60,7 +95,6 @@
         android:src="@mipmap/ic_search"
         app:layout_constraintBottom_toBottomOf="@id/tv_guanzhu"
         app:layout_constraintEnd_toEndOf="parent" />
-
 
 
     <androidx.viewpager.widget.ViewPager
