--- a/app/src/main/res/layout/item_look.xml
+++ b/app/src/main/res/layout/item_look.xml
@@ -51,9 +51,8 @@
 
     <ImageView
         android:id="@+id/iv_detail"
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"
         android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="@id/tv_title"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
@@ -66,7 +65,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:paddingTop="5dp"
-        android:paddingEnd="22dp"
         android:paddingBottom="5dp"
         android:textColor="#ff5b5b5b"
         android:textSize="12sp"
