--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -15,6 +15,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraint_dynamics_root"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -66,27 +67,38 @@
                 app:layout_constraintBottom_toBottomOf="@id/iv_head"
                 app:layout_constraintStart_toStartOf="@id/tv_name"
                 tools:ignore="MissingConstraints" />
-
-            <WebView
-                android:id="@+id/wb_introduction"
+            <TextView
+                android:id="@+id/tv_detailtitle"
+                android:paddingStart="20dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_time"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_marginTop="20dp"
-                android:paddingStart="14dp"
-                android:text=""
-                android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@id/iv_head"
-                tools:ignore="MissingConstraints" />
-            <ImageView
-                android:id="@+id/iv_img_detail"
+                android:layout_height="wrap_content"/>
+            <LinearLayout
+                android:id="@+id/ll"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="14dp"
+                app:layout_constraintTop_toBottomOf="@id/tv_detailtitle"
+                tools:ignore="WebViewLayout">
+
+                <WebView
+                    android:id="@+id/wb_introduction"
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:layout_marginTop="20dp"
+                    android:paddingStart="14dp"
+                    android:text=""
+                    android:textSize="16sp"
+                    tools:ignore="MissingConstraints" />
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_img"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text=""
-                android:textSize="16sp"
-                app:layout_constraintTop_toBottomOf="@id/wb_introduction"
+                app:layout_constraintTop_toBottomOf="@id/ll"
                 tools:ignore="MissingConstraints" />
+
             <TextView
                 android:id="@+id/tv_detail"
                 android:layout_width="wrap_content"
@@ -102,7 +114,7 @@
                 android:textSize="12sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/iv_img_detail" />
+                app:layout_constraintTop_toBottomOf="@id/rv_img" />
 
             <TextView
                 android:id="@+id/tv_look"
