--- a/app/src/main/res/layout/activity_push_tie.xml
+++ b/app/src/main/res/layout/activity_push_tie.xml
@@ -29,7 +29,7 @@
             android:background="@null"
             android:paddingEnd="20dp"
             android:hint="这一刻的想法..."
-            android:textColor="#ff989898"
+            android:textColorHint="#ff989898"
             android:textSize="14sp"
             app:layout_constraintTop_toBottomOf="@id/titleBar" />
 
