--- a/app/src/main/res/layout/item_look.xml
+++ b/app/src/main/res/layout/item_look.xml
@@ -32,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="05-14 16:22"
-        android:textColor="#ff989898"
+        android:textColor="@color/color_DFDFDF"
         android:textSize="13sp"
         app:layout_constraintBottom_toBottomOf="@id/iv_head"
         app:layout_constraintStart_toStartOf="@id/tv_name"
@@ -58,6 +58,31 @@
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         tools:ignore="MissingConstraints" />
 
+    <TextView
+        android:id="@+id/tv_detail"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:background="@color/color_DFDFDF"
+        android:paddingStart="70dp"
+        android:paddingTop="20dp"
+        android:visibility="gone"
+        android:paddingBottom="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/iv_head"
+        app:layout_constraintTop_toBottomOf="@id/iv_detail"
+        tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/iv_web_photo"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        android:layout_marginStart="10dp"
+        app:layout_constraintBottom_toBottomOf="@id/tv_detail"
+        app:layout_constraintStart_toStartOf="@id/tv_detail"
+        app:layout_constraintTop_toTopOf="@id/tv_detail" />
 
     <com.qmuiteam.qmui.widget.roundwidget.QMUIRoundButton
         android:id="@+id/rb_detail"
@@ -82,7 +107,7 @@
         android:text="2阅读"
         android:textColor="#ff989898"
         android:textSize="14sp"
-        app:layout_constraintTop_toBottomOf="@id/iv_detail" />
+        app:layout_constraintTop_toBottomOf="@id/tv_detail" />
 
     <TextView
         android:id="@+id/tv_comment"
