--- a/app/src/main/res/layout/activity_article_detail.xml
+++ b/app/src/main/res/layout/activity_article_detail.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="18dp"
+
                 android:paddingStart="14dp"
                 android:textColor="#ff020202"
                 android:textSize="19sp"
@@ -69,9 +69,11 @@
                 tools:ignore="MissingConstraints" />
             <TextView
                 android:id="@+id/tv_detailtitle"
-                android:paddingStart="20dp"
                 app:layout_constraintTop_toBottomOf="@id/tv_time"
-                android:layout_width="match_parent"
+                app:layout_constraintStart_toStartOf="@id/iv_head"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="5dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
             <LinearLayout
                 android:id="@+id/ll"
@@ -84,7 +86,7 @@
                     android:id="@+id/wb_introduction"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="10dp"
                     android:paddingStart="14dp"
                     android:text=""
                     android:textSize="16sp"
