--- a/app/src/main/res/layout/item_image.xml
+++ b/app/src/main/res/layout/item_image.xml
@@ -2,12 +2,12 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="100dp"
-    android:paddingTop="5dp"
-    android:paddingBottom="5dp"
-    android:layout_height="100dp">
+    android:layout_width="match_parent"
+    android:padding="2dp"
+    android:layout_height="120dp">
 <ImageView
     android:id="@+id/iv_img"
+    android:scaleType="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:ignore="MissingConstraints" />
