--- a/app/src/main/res/layout/item_look.xml
+++ b/app/src/main/res/layout/item_look.xml
@@ -52,6 +52,7 @@
     <ImageView
         android:id="@+id/iv_detail"
         android:layout_width="150dp"
+        android:scaleType="fitXY"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="@id/tv_title"
@@ -145,6 +146,21 @@
         app:layout_constraintBottom_toBottomOf="@id/rb_detail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/rb_detail" />
+
+    <ImageView
+        android:id="@+id/iv_close2"
+        android:layout_width="21dp"
+        android:layout_height="12dp"
+        android:layout_marginEnd="24.5dp"
+        android:background="#FFF2F2F2"
+        android:paddingStart="7dp"
+        android:paddingTop="3dp"
+        android:paddingEnd="7dp"
+        android:paddingBottom="3dp"
+        android:src="@mipmap/ic_close_x"
+        app:layout_constraintBottom_toBottomOf="@id/tv_read"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/tv_read" />
 
     <TextView
         android:id="@+id/tv_tui"
