--- a/app/src/main/res/layout/item_message_detail.xml
+++ b/app/src/main/res/layout/item_message_detail.xml
@@ -11,7 +11,6 @@
         android:layout_height="45dp"
         android:layout_margin="10dp"
         android:src="@mipmap/ic_addfriend"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="MissingConstraints" />
@@ -21,40 +20,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        app:layout_constraintBottom_toTopOf="@id/tv_detail"
+        android:textColor="@color/color_2BA4D9"
+        app:layout_constraintBottom_toTopOf="@id/tv_time"
         app:layout_constraintStart_toEndOf="@id/iv_head"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/tv_detail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@id/tv_name"
-        app:layout_constraintTop_toBottomOf="@id/tv_name"
-        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tv_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
         android:textColor="@color/color_CECECE"
         android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="@id/tv_name"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@id/tv_name"
+        app:layout_constraintBottom_toBottomOf="@id/iv_head"
+        app:layout_constraintStart_toStartOf="@id/tv_name"
+        app:layout_constraintTop_toBottomOf="@id/tv_name"
         tools:ignore="MissingConstraints" />
 
     <TextView
-        android:id="@+id/tv_pingbi"
+        android:id="@+id/tv_detail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="屏蔽"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@id/tv_detail"
-        app:layout_constraintEnd_toEndOf="@id/tv_time"
-        app:layout_constraintTop_toTopOf="@id/tv_detail"
-
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@id/tv_time"
+        app:layout_constraintTop_toBottomOf="@id/tv_time"
         tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
