--- a/app/src/main/res/layout/activity_rmb_maket_main.xml
+++ b/app/src/main/res/layout/activity_rmb_maket_main.xml
@@ -14,6 +14,7 @@
 
     <TextView
         android:id="@+id/tv_hot"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -31,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="13dp"
         android:layout_marginEnd="13dp"
+        android:visibility="gone"
         android:text="/"
         android:textColor="#ff020202"
         android:textSize="9sp"
@@ -45,6 +47,7 @@
         android:layout_height="wrap_content"
         android:text="最新"
         android:textColor="@color/color_137ED0"
+        android:visibility="gone"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/tv_hot"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,6 +69,7 @@
     <TextView
         android:id="@+id/tv_day"
         android:layout_width="wrap_content"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:text="日线"
@@ -85,6 +89,7 @@
         android:text="/"
         android:textColor="#ff020202"
         android:textSize="9sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tv_day"
         app:layout_constraintEnd_toStartOf="@id/tv_week"
         app:layout_constraintStart_toEndOf="@id/tv_day"
@@ -95,6 +100,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="周线"
+        android:visibility="gone"
         android:textColor="@color/color_020202"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/tv_day"
@@ -107,6 +113,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="13dp"
+        android:visibility="gone"
         android:layout_marginEnd="13dp"
         android:text="/"
         android:textColor="#ff020202"
@@ -123,6 +130,7 @@
         android:layout_height="wrap_content"
         android:text="月线"
         android:textColor="@color/color_020202"
+        android:visibility="gone"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@id/tv_day"
         app:layout_constraintEnd_toEndOf="parent"
@@ -280,6 +288,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
         android:text="银币"
+        android:visibility="gone"
         android:textColor="#ff5b5b5b"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/rb_ok"
@@ -291,6 +300,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="0"
+        android:visibility="gone"
         android:textColor="@color/color_137ED0"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/rb_ok"
@@ -301,6 +311,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="当前奖池"
+        android:visibility="gone"
         android:textColor="#ff5b5b5b"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="@id/rb_ok"
@@ -316,6 +327,7 @@
         android:text="实时行情 6月2日 15:00"
         android:textColor="#ff020202"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toStartOf="@id/tv_lilu"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
@@ -323,6 +335,7 @@
 
     <TextView
         android:id="@+id/tv_lilu"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dp"
