--- a/app/src/main/res/layout/pop_forecate.xml
+++ b/app/src/main/res/layout/pop_forecate.xml
@@ -49,6 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="大涨"
+        android:visibility="gone"
         android:textColor="#FFff6258"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@id/tv_zhang"
@@ -60,6 +61,7 @@
         android:id="@+id/tv_zhang"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_marginTop="5dp"
         android:text="涨"
         android:textColor="#FFff6258"
@@ -77,6 +79,7 @@
         android:layout_marginTop="5dp"
         android:text="平"
         android:textColor="@color/qmui_config_color_white"
+        android:visibility="gone"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@id/tv_die"
         app:layout_constraintStart_toEndOf="@id/tv_zhang"
@@ -89,6 +92,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:text="跌"
+        android:visibility="gone"
         android:textColor="#FFff6258"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@id/tv_dadie"
@@ -106,6 +110,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/tv_die"
+        android:visibility="gone"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
         tools:ignore="MissingConstraints" />
 
