--- a/app/src/main/res/layout/activity_rmb_maket_main.xml
+++ b/app/src/main/res/layout/activity_rmb_maket_main.xml
@@ -8,7 +8,7 @@
     tools:ignore="MissingConstraints">
 
     <com.diwaves.news.tools.MyTitleBar
-        android:id="@+id/title"
+        android:id="@+id/titleBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
@@ -24,7 +24,7 @@
         app:layout_constraintEnd_toStartOf="@id/fuhao"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title" />
+        app:layout_constraintTop_toBottomOf="@id/titleBar" />
 
     <TextView
         android:id="@+id/fuhao"
