--- a/app/src/main/res/layout/activity_yu_ce.xml
+++ b/app/src/main/res/layout/activity_yu_ce.xml
@@ -36,7 +36,7 @@
                     android:id="@+id/tv_title1"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/qmui_config_color_50_blue" />
+                    android:textColor="@color/color_017BD0" />
 
                 <TextView
                     android:id="@+id/tv_time1"
@@ -88,7 +88,7 @@
                     android:id="@+id/tv_title2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/qmui_config_color_50_blue" />
+                    android:textColor="@color/color_017BD0" />
 
                 <TextView
                     android:id="@+id/tv_time2"
@@ -140,7 +140,7 @@
                     android:id="@+id/tv_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/qmui_config_color_50_blue" />
+                    android:textColor="@color/color_017BD0" />
 
                 <TextView
                     android:id="@+id/tv_time"
