--- a/app/src/main/res/layout/item_look.xml
+++ b/app/src/main/res/layout/item_look.xml
@@ -53,7 +53,7 @@
         android:id="@+id/iv_detail"
         android:layout_width="150dp"
         android:scaleType="fitXY"
-        android:layout_height="wrap_content"
+        android:layout_height="300dp"
         android:layout_marginTop="5dp"
         app:layout_constraintStart_toStartOf="@id/tv_title"
         app:layout_constraintTop_toBottomOf="@id/tv_title"
